...
                                                        <constraint firstItem="62s-xK-Osr" firstAttribute="centerY" secondItem="ie8-zo-DuJ" secondAttribute="centerY" id="sXh-Q1-83m"/>
                                                        <constraint firstAttribute="bottom" secondItem="zza-B9-VzC" secondAttribute="bottom" constant="2" id="u73-hj-aTC"/>
                                                        <constraint firstItem="zza-B9-VzC" firstAttribute="leading" secondItem="ie8-zo-DuJ" secondAttribute="leading" constant="2" id="ykr-pB-vIl"/>
                                                    </constraints>
                                                </tableViewCellContentView>
                                                <color key="backgroundColor" red="0.46659570929999999" green="0.59655499460000005" blue="0.59728795290000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="operatorsTableView.operatorCell"/>
                                                <connections>
                                                    <outlet property="operatorImage" destination="zza-B9-VzC" id="PEi-Vv-hkP"/>
                                                    <outlet property="operatorNameLabel" destination="62s-xK-Osr" id="gNK-N3-NXV"/>
                                                    <segue destination="KAZ-uU-RXC" kind="presentation" identifier="operatorDetailSegue" id="poK-K8-il0"/>
                                                </connections>
                                            </tableViewCell>
...
            </objects>
            <point key="canvasLocation" x="3476.811594202899" y="930.80357142857133"/>
        </scene>
        <!--Find A Truck-->
        <scene sceneID="wyO-Oa-1lr">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="y1c-cU-07Q" userLabel="Find A Truck" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Find A Truck" image="magnifyingglass" catalog="system" id="XcX-tm-65F"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lEz-m2-8pE">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" red="0.083437152210000004" green="0.22229207819999999" blue="0.27718821170000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
